@@ -1,3 +1,8 @@
+2022-03-15 Benedikt Freisen <b.freisen AT gmx.net>
+
+	* device/include/gcc_attr.h:
+	  Compatibility macros for GCC attribute syntax.
+
 2022-03-15 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>
 
 	* src/SDCCsymt.c,
